snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha256
ac884ebd3d66690eefc4e7c252591b7d871a2c265990fa020f67af07617a622a